--- a/app/src/main/res/layout/fragment_automated_adjust_fragment.xml
+++ b/app/src/main/res/layout/fragment_automated_adjust_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_background"
-    tools:context=".fragments.AutomatedAdjustActivity">
+    tools:context=".fragments.AutomatedAdjustFragment">
 
 
     <TextView
@@ -14,10 +14,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="254dp"
-        android:text="LightSensorValue"
+        android:layout_marginTop="19dp"
+        android:text="@string/lightsensorvalue"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/test"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -28,9 +28,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="283dp"
+        android:layout_marginTop="49dp"
         android:textAlignment="center"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/test"
         android:textSize="18sp"
         android:textStyle="bold" />
 
