--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="43dp"
         android:text="@string/home_fragment"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/test"
         android:textSize="30sp" />
 
 
