--- a/app/src/main/res/drawable/ic_night_light_icon.xml
+++ b/app/src/main/res/drawable/ic_night_light_icon.xml
@@ -1,5 +1,5 @@
 <vector android:height="24dp" android:viewportHeight="512"
     android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#000000"
+    <path android:fillColor="#070fea"
         android:pathData="M0,256l0,256 256,-0 256,-0 0,-256 0,-256 -256,-0 -256,-0 0,256zM272.6,47.5c24.5,3.7 45.1,12.5 63.7,27.3 7.8,6.3 23.2,22.4 25.4,26.7 0.9,1.6 3,5.1 4.9,7.7 4.9,7 7.8,13.2 11.8,25.3 6.1,18.8 6.9,24.1 6.9,43.5 0,18.9 -0.8,24.6 -6.3,41.5 -3.7,11.6 -6,16.8 -12.1,26.8 -2.7,4.5 -4.9,8.5 -4.9,8.8 0,0.4 -3,6 -6.6,12.4 -10.1,18.1 -17.4,40.5 -20.4,62.5 -1.5,11.1 -2.9,14.3 -7.3,16.3 -3.2,1.5 -10.1,1.7 -72.7,1.7 -61.5,-0 -69.6,-0.2 -72.6,-1.6 -5.4,-2.6 -7.1,-6.5 -8.9,-20.5 -2.1,-16.6 -5.5,-28.5 -12.4,-44.3 -5.8,-12.9 -8.3,-17.8 -12.8,-24.5 -3.3,-4.9 -16.7,-32.8 -18.6,-38.6 -3.4,-10.4 -5.1,-23.7 -5.1,-40 -0.1,-24 2.9,-38.3 12,-57.4 6.1,-12.5 9.3,-17.6 16.3,-26 19.3,-22.9 39.8,-36.5 65.8,-43.6 20.6,-5.6 35.5,-6.7 53.9,-4z" android:strokeColor="#00000000"/>
 </vector>
